# zipwrapper

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/: zizmor.yml
.github/workflows/: benchmark.yml  ci.yml  valgrind.yml
dev/bench/: data.js
docs/: Doxyfile  conf.py  mainpage.dox
freecadtestfiles/: README
scripts/: callgrind-bench.sh
src/: ZipHeader.cpp  ZipHeader.h  ZipWrapper.cpp  ZipWrapper.h
testfiles/: README
tests/: collectioncollection.cpp  gitrepo_roundtrip.cpp  testfiles.cpp  zipfile.cpp  zipstreams.cpp
